Fix entering space on FireFox

--- a/src/web/MarkdownTextInput.css
+++ b/src/web/MarkdownTextInput.css
@@ -3,6 +3,10 @@
   overflow: auto;
 }
 
+.react-native-live-markdown-input-multiline {
+  white-space: pre-wrap;
+}
+
 .react-native-live-markdown-input-singleline p {
   display: inline-block;
 }
